--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "pcap2",
+  "name": "ws-pcap2",
   "version": "3.1.0",
   "description": "raw packet capture, decoding, and analysis",
   "license": "MIT",
   "author": "Matt Ranney <mjr@ranney.com>",
+  "contributors": ["pdp <pdp@websecurify.com>"],
   "main": "./index",
   "repository": {
     "type": "git",
