--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "ws-pcap2",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "description": "raw packet capture, decoding, and analysis",
   "license": "MIT",
   "author": "Matt Ranney <mjr@ranney.com>",
-  "contributors": ["pdp <pdp@websecurify.com>"],
+  "contributors": [
+    "pdp <pdp@websecurify.com>"
+  ],
   "main": "./index",
   "repository": {
     "type": "git",
